# Rust_ML

./: .gitignore  README.md
burn_app/: Cargo.toml
burn_app/src/: lib.rs  main.rs  model.rs  training.rs
butter/: Cargo.toml
butter/src/: lib.rs  main.rs  model.rs  training.rs
butter/src/data/: batcher.rs  butter_extract.rs  dataset.rs  mod.rs
mnist_local/: Cargo.toml  config.json
mnist_local/src/: lib.rs  main.rs  model.rs  training.rs
mnist_local/src/data/: batcher.rs  dataset.rs  mod.rs
