[package]
name = "butter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
burn = { git = "https://github.com/burn-rs/burn.git", features = ["train", "tch", "wgpu"] }
byteorder = "1.5.0"
flate2 = "1.0.28"
image = "0.24.7"
